php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22022 imap_mail_compose produces Segmentation Fault
Submitted: 2003-02-02 17:11 UTC Modified: 2003-02-03 15:24 UTC
From: jury at hightech dot lv Assigned:
Status: Closed Package: IMAP related
PHP Version: 4.3.1-dev OS: LINUX
Private report: No CVE-ID: None
 [2003-02-02 17:11 UTC] jury at hightech dot lv
When you make call: imap_mail_compose($env, $body) it produces Segmentation Fault. Tested on PHP Versions: 4.2.3(CGI, Apache Module), 4.3.0 (CGI, Apache Module).

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-02-02 17:15 UTC] iliaa@php.net
Could you please put var_dump($env,$body) before the imap_mail_compose() call and reply with the output of the var_dump() function.
 [2003-02-02 17:21 UTC] jury at hightech dot lv
That Is Var Dump ($env, $body):
php test.php 
Content-type: text/html
X-Powered-By: PHP/4.3.0

Pizdec
array(2) {
  ["from"]=>
  string(16) "jury@hightech.lv"
  ["to"]=>
  string(16) "some@unknown.net"
}
array(0) {
}
Segmentation fault
 [2003-02-03 15:24 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC