Fixed bug #22022 (Crash in imap_mail_compose() if the body is an empty     array).